--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@
     clear: both;
 }
 
-.float-left {
+img, .float-left {
     float: left;
 }
 
@@ -27,6 +27,7 @@
 }
 /* /float */
 
+/* header */
 #header h1 {
     padding-top: 30px;
     padding-bottom: 40px;
@@ -40,33 +41,34 @@
     text-align: justify;
     text-align-last: center;
 }
+/* /header */
 
 main {
     padding-top: 50px;
     color: white;
-    
 }
 
 
-
+/* columns */
 .col {
-    width: 333px;
+    width: 400px;
     background-color: #0f0e17;
-    height: 200px;
-    margin-left: 30px;
-    margin-right: 30px;
     margin-bottom: 50px;
-    border: 4px solid rgba(212, 212, 212, 0.9);
-    
+    border: 4px solid rgba(255, 255, 255, 0.9);
+    line-height: 30px;
 }
 
 .col img {
     width: 100px;
+    padding-right: 10px;
 }
 
-
+span {
+    display: block;
+}
 
 a.email {
     color: #46a0c7;
     text-decoration: none;
 }
+/* /columns */
