--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+/* general settings */
 * {
     margin: 0;
     padding: 0;
@@ -5,11 +6,16 @@
     font-family: 'Fredoka', sans-serif;
 }
 
+body {
+    color: white;
+}
+
 .container {
     max-width: 1200px;
     margin: 0 auto;
     
 }
+/* /general settings */
 
 /* float */
 .clear-fix::after {
@@ -28,6 +34,7 @@ img, .float-left {
 /* /float */
 
 /* header */
+
 #header h1 {
     padding-top: 30px;
     padding-bottom: 40px;
@@ -40,31 +47,27 @@ img, .float-left {
 #header p {
     text-align: justify;
     text-align-last: center;
+    color: black;
+    padding-bottom: 50px;
 }
 /* /header */
 
-main {
-    padding-top: 50px;
-    color: white;
-}
-
-
 /* columns */
 .col {
-    width: 400px;
+    width: 372px;
     background-color: #0f0e17;
-    margin-bottom: 50px;
+    margin: 20px 14px;
     border: 4px solid rgba(255, 255, 255, 0.9);
-    line-height: 30px;
 }
 
-.col img {
-    width: 100px;
-    padding-right: 10px;
+.col .profile-img {
+    width: 90px;
+    margin-right: 10px;
 }
 
-span {
+.col strong, .col span {
     display: block;
+    padding-top: 5px;
 }
 
 a.email {
